manifests/seraphim/prod/woodpecker/Namespace-woodpecker.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: woodpecker
