manifests/seraphim/prod/woodpecker/StatefulSet-woodpecker-agent.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: woodpecker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: agent
    app.kubernetes.io/version: 3.12.0
    helm.sh/chart: agent-2.0.1
  name: woodpecker-agent
  namespace: woodpecker
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: woodpecker
      app.kubernetes.io/name: agent
  serviceName: woodpecker-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: woodpecker
        app.kubernetes.io/name: agent
    spec:
      containers:
        - env:
            - name: WOODPECKER_AGENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: agent-secret
                  name: woodpecker
            - name: WOODPECKER_BACKEND
              value: kubernetes
            - name: WOODPECKER_BACKEND_K8S_NAMESPACE
              value: woodpecker
            - name: WOODPECKER_BACKEND_K8S_NAMESPACE_PER_ORGANIZATION
            - name: WOODPECKER_BACKEND_K8S_POD_ANNOTATIONS
              value: ""
            - name: WOODPECKER_BACKEND_K8S_POD_LABELS
              value: ""
            - name: WOODPECKER_BACKEND_K8S_STORAGE_CLASS
              value: ""
            - name: WOODPECKER_BACKEND_K8S_STORAGE_RWX
            - name: WOODPECKER_BACKEND_K8S_VOLUME_SIZE
              value: 10G
            - name: WOODPECKER_CONNECT_RETRY_COUNT
              value: "1"
            - name: WOODPECKER_SERVER
              value: woodpecker-server:9000
          image: docker.io/woodpeckerci/woodpecker-agent:v3.12.0
          imagePullPolicy: IfNotPresent
          name: agent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources: {}
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/woodpecker
              name: agent-config
      securityContext:
        fsGroup: 1000
      serviceAccountName: woodpecker-agent
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: agent-config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
