manifests/seraphim/prod/woodpecker/StatefulSet-woodpecker-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: woodpecker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: 3.13.0
    helm.sh/chart: server-3.0.1
  name: woodpecker-server
  namespace: woodpecker
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: woodpecker
      app.kubernetes.io/name: server
  serviceName: woodpecker-server-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: woodpecker
        app.kubernetes.io/name: server
    spec:
      containers:
        - env:
            - name: WOODPECKER_ADMIN
              value: administrator
            - name: WOODPECKER_AGENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: agent-secret
                  name: woodpecker
            - name: WOODPECKER_DATABASE_DATASOURCE
              valueFrom:
                secretKeyRef:
                  key: uri
                  name: woodpecker-app
            - name: WOODPECKER_DATABASE_DRIVER
              value: postgres
            - name: WOODPECKER_FORGEJO
              value: "true"
            - name: WOODPECKER_FORGEJO_CLIENT
              valueFrom:
                secretKeyRef:
                  key: client
                  name: oidc
            - name: WOODPECKER_FORGEJO_SECRET
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: oidc
            - name: WOODPECKER_FORGEJO_URL
              value: https://dev.vegapunk.cloud
            - name: WOODPECKER_HOST
              value: https://ci.vegapunk.cloud
            - name: WOODPECKER_OPEN
              value: "true"
            - name: WOODPECKER_PLUGINS_PRIVILEGED
              value: woodpeckerci/plugin-docker-buildx
          image: docker.io/woodpeckerci/woodpecker-server:v3.13.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: server
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
            - containerPort: 9000
              name: grpc
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources: {}
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/lib/woodpecker
              name: data
      securityContext:
        fsGroup: 1000
      serviceAccountName: default
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
