manifests/seraphim/prod/woodpecker/HTTPRoute-woodpecker.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: woodpecker
  namespace: woodpecker
spec:
  hostnames:
    - ci.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: woodpecker-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
